--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "expo": "~46.0.16",
+    "expo-font": "^10.2.1",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-native": "0.69.6",
+    "react-router-native": "^6.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
