--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "expo": "~46.0.16",
     "expo-font": "^10.2.1",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "js-cookie": "^3.0.1",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-flash-message": "^0.3.1",
     "react-router-native": "^6.4.2"
   },
   "devDependencies": {
