--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-flash-message": "^0.3.1",
-    "react-router-native": "^6.4.2"
+    "react-router-native": "^6.4.2",
+    "react-native-web": "~0.18.7",
+    "react-dom": "18.0.0",
+    "@expo/webpack-config": "^0.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
