--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-native-config": "^1.4.11",
     "react-native-flash-message": "^0.3.1",
     "react-router-native": "^6.4.2",
-    "expo-checkbox": "~2.2.0"
+    "expo-checkbox": "~2.2.0",
+    "react-native-web": "~0.18.7",
+    "react-dom": "18.0.0",
+    "@expo/webpack-config": "^0.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
