--- a/package.json
+++ b/package.json
@@ -9,28 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/datetimepicker": "6.2.0",
     "axios": "^1.1.3",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "dotenv": "^16.0.3",
     "expo": "~46.0.16",
+    "expo-checkbox": "~2.2.0",
     "expo-font": "^10.2.1",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "js-cookie": "^3.0.1",
     "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-config": "^1.4.11",
     "react-native-flash-message": "^0.3.1",
-    "react-router-native": "^6.4.2",
-    "expo-checkbox": "~2.2.0"
+    "react-native-web": "~0.18.7",
+    "react-router-native": "^6.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "babel-preset-react-native": "^4.0.1",
-    "react-native-dotenv": "^3.4.2"
+    "react-native-dotenv": "^3.4.2",
+    "sharp-cli": "^4.1.0"
   },
   "private": true
 }
